[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "AddressComplete"
version = "1.0.0"
description = "A Python client for the Canada Post AddressComplete API"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Darian Elwood", email = "dellwood546@gmail.com"}
]
dependencies = [
    "requests>=2.32.3",
]
keywords = [
    "address",
    "addresscomplete",
    "canada-post",
    "address-validation",
    "address-autocomplete",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]